# 2019TRoMaC-CV-HeroAutoAim

./: CMakeLists.txt
detector/: ArmorDetector.cpp  ArmorDetector.h
main/: ThreadControl.cpp  ThreadControl.h  main.cpp
predictor/: KalmanFilter.h
